# notes

./: .gitignore  README.md  functions.py  happyx.cfg  main.py  pyproject.toml  run.py  todo.md
.keep/: crud.nim  db.nim  utils.nim
api/: api_logging.py  create.sql  crud.py  database.py  functions.py  main.py  markdown.py  models.py  routes.py  schemas.py
database/: create_tables.sql
frontend/: base.html
frontend/components/: index.html
main_app/: crud.py  main.py  menu.py  models.py  schemas.py
notes/backend/: .gitignore  __init__.py  api.py  database.py  domain.py  files.py  models.py
notes/backend/frontend/: base.html
notes/backend/frontend/components/: edit.html  index.html  new.html  note.html  search.html
notes/frontend/: base.html
notes/frontend/components/: edit.html  new.html  note.html
notes/templates/components/: edit.html  new.html  search.html
src/: .env  __init__.py  app  components.nim  crud.nim  database.py  db  db.nim  domain.py  files.py  git  git.nim  j.nim  main  main.nim  main.py  urls.nim  utils.nim  views.nim
src/components/: edit_note.nim  html_template.nim  index.nim  note.nim  search.nim
src/tests/: test_database.py
static/: style.css
templates/: base.html  edit_note.html  index.html  note.html
tests/: test_database.py
