[tool.poetry]
name = "notes"
version = "0.1.0"
description = "notes api"
authors = ["Bruno Félix <bh.felix@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
Jinja2 = "^3.1.2"
jinja2-fragments = "^0.3.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
