[tool.poetry]
name = "notes"
version = "0.1.0"
description = "web app to read markdown notes in html"
authors = ["bhunao <bh.felix@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Markdown = "^3.5"
fastapi = "^0.103.2"
sqlmodel = "^0.0.8"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
jinja2-fragments = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
